app/finch/native/arti_bridge/include/arti_bridge.h

#ifndef ARTI_BRIDGE_H
#define ARTI_BRIDGE_H

#pragma once

/* Generated with cbindgen:0.27.0 */

/* Generated by cbindgen — do not edit. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>

#define ARTI_OK 0

#define ARTI_ERR_NULL -1

#define ARTI_ERR_UTF8 -2

#define ARTI_ERR_PANIC -3

#define ARTI_ERR_INIT -4

#define ARTI_ERR_ONION -5

#define ARTI_ERR_SHUTDOWN -6

/**
 * Opaque handle. All FFI calls take `*mut ArtiHandle`.
 */
typedef struct ArtiHandle ArtiHandle;

/**
 * Status snapshot mirrored to Dart via an out-pointer. Layout MUST match
 * the FFI bindings in `lib/services/tor/ffi_bindings.dart`.
 */
typedef struct {
  uint32_t bootstrap_percent;
  uint32_t circuit_count;
  bool is_ready;
  uint16_t socks_port;
} ArtiStatus;

/**
 * Initialize Arti, kick off bootstrap on the embedded runtime, and return
 * an opaque handle. Bootstrap continues in the background — poll
 * [`arti_status`] until `is_ready` flips true.
 *
 * `data_dir` must be a NUL-terminated UTF-8 path; Arti stores its state,
 * circuit cache, and onion-service keypair here.
 *
 * On error returns NULL. The handle must be passed to [`arti_shutdown`]
 * to release resources.
 */
ArtiHandle *arti_init(const char *data_dir);

/**
 * Publish the on-device HTTP server (listening on `127.0.0.1:local_port`)
 * as a v3 onion service. Returns the `<address>.onion` host on success,
 * or NULL on error. The caller must free the returned string with
 * [`arti_string_free`].
 *
 * The keypair lives under `<data_dir>/hs-state/<nickname>` so the address
 * is stable across restarts.
 */
char *arti_create_onion_service(ArtiHandle *handle, uint16_t local_port);

/**
 * Returns the local SOCKS5 port Arti uses for outbound connections, or 0
 * if the SOCKS proxy isn't running. Used by Plan 11b to route the Dart
 * `http.Client` through Tor.
 */
uint16_t arti_socks_port(ArtiHandle *handle);

/**
 * Fill `out` with the latest status snapshot. Returns [`ARTI_OK`] or a
 * negative error code. `out` must point to a writable [`ArtiStatus`].
 */
int arti_status(ArtiHandle *handle, ArtiStatus *out);

/**
 * Drop the handle, tear down the runtime, and unpublish the onion
 * service. After this call, `handle` MUST NOT be used again.
 */
int arti_shutdown(ArtiHandle *handle);

/**
 * Free a string returned by [`arti_create_onion_service`].
 */
void arti_string_free(char *s);

#endif  /* ARTI_BRIDGE_H */